<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/cart_menu" />
        <item
                android:id="@+id/nav_addproduct"
                android:icon="@drawable/ic_product"
                android:title="@string/add_product" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
    </group>
</menu>