<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/fragmentClickable"
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/shape_btn_back"
                android:paddingVertical="18dp"
                android:paddingHorizontal="22dp"
                app:srcCompat="@drawable/ic_btn_back" />

        <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                android:singleLine="true"
                android:layout_marginHorizontal="28dp"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/eerie_black"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/cultured"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title" />

        <android.widget.TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/black"
                android:textAlignment="center"
                android:text="@string/request_reset"
                android:layout_marginHorizontal="28dp"
                android:paddingVertical="20dp"
                android:textColor="@color/cultured"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <include
                layout="@layout/loader_layout"
                style="@style/loaderUI"
                android:visibility="gone"
                android:id="@+id/include_loader" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>